# shape-forge

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  download_and_setup_dependencies.bat  download_and_setup_dependencies.sh
.github/workflows/: release.yml  superlinter.yml
doc/: project_flow_diagram.md
src/: main.cpp
src/gui/: circle.cpp  circle.h  rectangle.h  shape.h  shape_clipboard.cpp  shape_clipboard.h  shape_editor_application.cpp  shape_editor_application.h  shape_editor_gui.cpp  shape_editor_gui.h
src/log/: interface_logger.h  logger.cpp  logger.h
thirdparties/: NO_EMPTY
